--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 body {
 
     font-family: 'Arial', sans-serif;
-    margin: 0;
+    margin: 0 1px 0 1px;
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
@@ -303,6 +303,65 @@ button:hover {
     top: 20px; /* Adjust the top position as needed */
     right: 27px; /* Adjust the right position as needed */
 }
+
+/********** Carousel container styles ******/
+.carousel .carousel-item {
+    text-align: center;
+    padding: 1rem;
+}
+
+.carousel .product-image {
+    max-height: 250px; /* Ensure images don't get too big */
+    object-fit:contain;
+}
+
+.carousel h3 {
+    margin-top: 0.5rem;
+    font-size: 1.2rem;
+}
+
+.carousel p {
+    font-size: 1rem;
+}
+
+.carousel button {
+    background-color: #0f03f3;
+    color: #ffffff;
+    border: none;
+    padding: 0.5rem 1rem;
+    margin-top: 0.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.carousel button:hover {
+    background-color: #5a727c;
+}
+
+.carousel-arrows {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10; /* Higher z-index to appear on top */
+}
+
+.carousel-arrows button {
+  background: none;
+  border: none;
+  opacity: 1; /* Ensure buttons are fully visible */
+  color: #fff; /* Adjust color to contrast with background */
+  padding: 0.5rem;
+  cursor: pointer;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.carousel-arrows button:hover {
+  opacity: 0.7;
+}
+
 /* Hamburger Menu Button */
 .burger-menu {
     background: none;
